Add config driven local dev, Add tailwind config
