# api/reptr.openapi.yaml
@@ -163,6 +163,26 @@ paths:
             text/html:
               schema:
                 type: string
+  /styles/{path}/{style_name}:
+    get:
+      operationId: serveStyles
+      summary: serve css
+      description: acts as a handler for css stylesheets
+      parameters:
+        - name: style_name
+          in: path
+          schema:
+            type: string
+        - name: path
+          in: path
+          schema:
+            type: string
+      responses:
+        200:
+          content:
+            text/css:
+              schema:
+                type: string
   /secure/api/v1/groups:
     get:
       operationId: 'getGroups'
